--- a/.github/workflows/selfhosted.yml
+++ b/.github/workflows/selfhosted.yml
@@ -8,7 +8,6 @@
 name: Crave Builder (self-hosted)
 on:
   workflow_dispatch:
-    # Various inputs to simplify usage of workflow.
     inputs:
       CRAVE_CMD:
         description: 'The commands for running crave'
@@ -24,7 +23,219 @@ on:
         - 'no'
 
 jobs:
-  
+  Start-Runner:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up environment
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y tmux
+
+    - name: Configure the 'crave' environment
+      shell: bash
+      run: |
+        echo "DCDEVSPACE status: ${DCDEVSPACE}"
+        if [[ "$DCDEVSPACE" == *1* ]]; then
+          echo 'No need to set up crave, we are already running in devspace!'
+        else
+          mkdir ${HOME}/bin/
+          curl -s https://raw.githubusercontent.com/accupara/crave/master/get_crave.sh | bash -s --
+          mv ${PWD}/crave ${HOME}/bin/
+          sudo ln -sf /home/${USER}/bin/crave /usr/bin/crave
+          envsubst < ${PWD}/crave.conf.sample >> ${PWD}/crave.conf
+          rm -rf ${PWD}/crave.conf.sample          
+        fi
+      env:
+        CRAVE_USERNAME: ${{  secrets.CRAVE_USERNAME  }}
+        CRAVE_TOKEN: ${{  secrets.CRAVE_TOKEN  }}
+
+    - name: Run crave devspace
+      shell: bash
+      run: |
+        crave ${{ secrets.CRAVE_FLAGS }} devspace -- "echo 'Looking for runner...'
+          if [ -f actions-runner/run.sh ]; then
+            echo 'Runner found! Restarting it...'
+          else
+            echo 'Error! Runner not found!'
+            exit 1
+          fi
+
+          if tmux has-session -t ghactions; then 
+            echo 'Runner is already Running'
+          else 
+            tmux kill-session -t ghactions || true
+            tmux new-session -d -s ghactions 
+            tmux send-keys -t ghactions './actions-runner/run.sh' Enter 
+            echo 'Runner Started'
+          fi "
+
+  prepare:
+    name: Prepare for Building
+    runs-on: ubuntu-latest
+    steps:
+    - name: Check-out to repository
+      uses: actions/checkout@v4
+
+    - name: Check Credentials
+      shell: bash
+      run: |
+        if [[ -z "${{ secrets.CRAVE_TOKEN }}" || -z "${{ secrets.CRAVE_USERNAME }}" ]]; then
+          echo "Crave Credentials Not Configured! Exiting..."
+          exit 1
+        fi
+        bash scripts/env-checker.sh
+
+    - name: Set Project variables
+      id: proj-variables
+      shell: bash
+      run: |
+        case "${{ github.event.inputs.BASE_PROJECT }}" in
+          # (cases unchanged)
+        esac
+
+        if [[ "${{ github.event.inputs.PRODUCT_NAME }}" == *_* ]] &&            [[ "${{ github.event.inputs.PRODUCT_NAME }}" != gsi_* ]] &&            [[ "${{ github.event.inputs.PRODUCT_NAME }}" != sdk_* ]] &&            [[ "${{ github.event.inputs.PRODUCT_NAME }}" != *_sprout ]] &&            [[ "${{ github.event.inputs.PRODUCT_NAME }}" != Mi439_* ]] &&            [[ "${{ github.event.inputs.PRODUCT_NAME }}" != Mi8937_* ]]; then
+          LUNCH="lunch ${{ github.event.inputs.PRODUCT_NAME }}-${{ github.event.inputs.BUILD_TYPE }}"
+        elif [[ "${{ github.event.inputs.BASE_PROJECT }}" == "LOS22.1" ]] &&              [[ "${{ github.event.inputs.BUILD_DIFFERENT_ROM }}" == "echo 'Build Starting!'" ]]; then
+          LUNCH="riseup ${{ github.event.inputs.PRODUCT_NAME }} ${{ github.event.inputs.BUILD_TYPE }}"
+        else
+          LUNCH="breakfast ${{ github.event.inputs.PRODUCT_NAME }} ${{ github.event.inputs.BUILD_TYPE }}"
+        fi
+
+        if [[ "${{ github.event.inputs.LOCAL_MANIFEST }}" =~ \.xml(/)?$ ]]; then
+          local_manifest_url="${{ github.event.inputs.LOCAL_MANIFEST }}"
+          export local_manifest_url="${local_manifest_url%/}"
+          LOCAL_MANIFEST="mkdir -p .repo/local_manifests && rm -rf .repo/local_manifests/* || true && curl -o .repo/local_manifests/local_manifest.xml ${local_manifest_url}"
+        else
+          export LOCAL_MANIFEST="git clone ${{ github.event.inputs.LOCAL_MANIFEST }} --depth 1 -b ${{github.event.inputs.LOCAL_MANIFEST_BRANCH}} .repo/local_manifests"
+        fi
+
+        echo "PROJECTFOLDER=$PROJECTFOLDER" >> "$GITHUB_OUTPUT"
+        echo "LUNCH=$LUNCH" >> "$GITHUB_ENV"
+        echo "LOCAL_MANIFEST=$LOCAL_MANIFEST" >> "$GITHUB_ENV"
+
+    - name: Display Run Parameters
+      shell: bash
+      run: |
+        echo "Displaying Local Manifests"
+        if [[ -z "${{ secrets.DISPLAY_FALSE }}" ]]; then
+          bash -c "$LOCAL_MANIFEST"
+          cat .repo/local_manifests/*.xml
+        else
+          echo "Displaying is disabled through secrets."
+        fi
+
+        echo "Building on ${{ github.event.inputs.BASE_PROJECT }} project"
+        echo "PROJECTFOLDER=$PROJECTFOLDER" >> "$GITHUB_OUTPUT"
+        echo "PROJECTID=$PROJECTID"  >> "$GITHUB_OUTPUT"
+        echo "REPO_INIT=$REPO_INIT" >> "$GITHUB_OUTPUT"
+        echo "LUNCH=$LUNCH" >> "$GITHUB_ENV"
+        echo "LUNCH=$LUNCH" >> "$GITHUB_OUTPUT"
+        echo "LOCAL_MANIFEST=$LOCAL_MANIFEST" >> "$GITHUB_ENV"
+        echo "LOCAL_MANIFEST=$LOCAL_MANIFEST" >> "$GITHUB_OUTPUT"
+
+    - name: Display Run Parameters # Credit to azwhikaru for this part
+      run: |
+        echo "::group::User Environment Variables"
+        echo "Base Project: ${{ github.event.inputs.BASE_PROJECT }}"
+        echo "Extra Repo Init: ${{ github.event.inputs.BUILD_DIFFERENT_ROM }}"
+        echo "Removals: ${{ github.event.inputs.REMOVALS }}"
+        echo "Local Manifest: ${{ github.event.inputs.LOCAL_MANIFEST }}"
+        echo "Local Manifest Branch: ${{ github.event.inputs.LOCAL_MANIFEST_BRANCH }}"
+        echo "Device Name: ${{ github.event.inputs.DEVICE_NAME }}"
+        echo "Breakfast/Lunch Target: ${{ env.LUNCH }}"
+        echo "Build Command: ${{ github.event.inputs.BUILD_COMMAND }}"
+        echo "Clean Build: ${{ github.event.inputs.CLEAN_BUILD }}"
+        echo "::endgroup::"
+
+        echo "Displaying Local Manifests"
+        if [[ -z "${{ secrets.DISPLAY_FALSE }}" ]]; then
+          bash -c "$LOCAL_MANIFEST"
+          cat .repo/local_manifests/*.xml
+        else
+          echo "Displaying is disabled through secrets."
+        fi
+    outputs:
+      PROJECTFOLDER: ${{ steps.proj-variables.outputs.PROJECTFOLDER }}
+      PROJECTID: ${{ steps.proj-variables.outputs.PROJECTID }}
+      REPO_INIT: ${{ steps.proj-variables.outputs.REPO_INIT }}
+      LUNCH: ${{ steps.proj-variables.outputs.LUNCH }}
+      LOCAL_MANIFEST: ${{ steps.proj-variables.outputs.LOCAL_MANIFEST }}
+
+  test:
+    name: Test Local Manifests
+    needs: prepare
+    runs-on: ubuntu-latest
+    steps:
+      # Accept Project Variables
+    - name: Set Repo Project
+      run: |
+        PROJECTFOLDER="${{ needs.prepare.outputs.PROJECTFOLDER }}"
+        PROJECTID="${{ needs.prepare.outputs.PROJECTID }}"
+        REPO_INIT="${{ needs.prepare.outputs.REPO_INIT }}"
+        LUNCH="${{ needs.prepare.outputs.LUNCH }}"
+        LOCAL_MANIFEST="${{ needs.prepare.outputs.LOCAL_MANIFEST }}"
+
+        echo "PROJECTFOLDER=$PROJECTFOLDER" >> "$GITHUB_ENV"
+        echo "PROJECTID=$PROJECTID"  >> "$GITHUB_ENV"
+        echo "REPO_INIT=$REPO_INIT" >> "$GITHUB_ENV"
+        echo "LUNCH=$LUNCH" >> "$GITHUB_ENV"
+        echo "LOCAL_MANIFEST=$LOCAL_MANIFEST" >> "$GITHUB_ENV"
+
+      # Download and configure 'repo'.
+    - name: Configure the 'repo' environment
+      run: |
+        # Check if repo is already installed
+        if ! command -v repo >/dev/null 2>&1; then
+          echo "Repo not found. Installing now..."
+          # Create bin directory if it doesn't exist
+          mkdir -p ~/bin
+          # Download repo script
+          curl https://storage.googleapis.com/git-repo-downloads/repo >> ~/bin/repo
+          # Make repo script executable
+          chmod a+x ~/bin/repo
+          # Create symbolic link to /usr/bin/repo
+          sudo ln -sf "/home/$(whoami)/bin/repo" "/usr/bin/repo"
+          echo "Repo installation complete."
+        else
+          echo "Repo already installed."
+        fi
+      continue-on-error: true
+      
+      # Generate 'git' credential in base of the workflow's author.
+    - name: Set-up 'git' credential(s)
+      run: |
+        git config --global user.name "${{ github.actor }}"
+        git config --global user.email "${{ github.actor_id }}+${{ github.actor }}@users.noreply.github.com"
+
+      # Test Your Personal 'Local Manifests' against The ROM
+    - name: Test Local Manifests
+      if: ${{ github.event.inputs.BUILD_DIFFERENT_ROM != 'skip' }}
+      run: |
+        rm -rf tester
+        mkdir tester
+        cd tester 
+        if [ "${{ github.event.inputs.BUILD_DIFFERENT_ROM }}" == "echo 'Build Starting!'" ]; then
+          $REPO_INIT
+        else
+          ${{ github.event.inputs.BUILD_DIFFERENT_ROM }}
+        fi 
+
+        bash -c "$LOCAL_MANIFEST"
+
+        timeout 1m repo sync --force-sync || { exit_code=$?; [ $exit_code -eq 124 ] || (echo "Error: Process failed with exit code $exit_code"; exit $exit_code); }
+        du -csh . # Output Size when done
+        rm -rf .repo
+      timeout-minutes: 10
+    outputs:
+      PROJECTFOLDER: ${{ needs.prepare.outputs.PROJECTFOLDER }}
+      PROJECTID: ${{ needs.prepare.outputs.PROJECTID }}
+      REPO_INIT: ${{ needs.prepare.outputs.REPO_INIT }}
+      LUNCH: ${{ needs.prepare.outputs.LUNCH }}
+      LOCAL_MANIFEST: "${{ needs.prepare.outputs.LOCAL_MANIFEST }}"
 
   build:
     timeout-minutes: 1440
