--- a/.github/workflows/selfhosted.yml
+++ b/.github/workflows/selfhosted.yml
@@ -397,37 +397,41 @@ jobs:
           fi
         )
 
-        # Create a project folder
+# Create a project folder
     - name: Create Project Folders
       run: |
         echo "DCDEVSPACE status: ${DCDEVSPACE}"
         if [[ $DCDEVSPACE != *1* ]]; then
-
-          #curl -s https://raw.githubusercontent.com/accupara/crave/master/get_crave.sh | bash -s -- 
-
-          #mkdir -p ${HOME}/bin/
-          #mv ${PWD}/crave ${HOME}/bin/ 
-          #sudo ln -sf /home/${USER}/bin/crave /usr/bin/crave; sudo chmod +x /usr/bin/crave 
-
           echo "Symlinking devspace folder"
           mkdir -p devspace
           sudo mkdir -p /crave-devspaces
-          sudo ln -sf ${pwd}/devspace /crave-devspaces
+          
+          # ✅ FIXED: use $(pwd) instead of ${pwd}
+          sudo ln -sf "$(pwd)/devspace" /crave-devspaces
           sudo chmod 777 /crave-devspaces
+
+          echo "Symlink created. Debug info:"
+          echo "PWD: $(pwd)"
+          ls -al /crave-devspaces || true
         else
           echo "We are already running in devspace... Skipping Symlinks"
         fi
+
         if grep -q "$PROJECTFOLDER" <(crave clone list --json | jq -r '.clones[]."Cloned At"') || [[ "${DCDEVSPACE}" == "1" ]]; then
           crave clone destroy -y $PROJECTFOLDER || echo "Error removing $PROJECTFOLDER"
         else          
-        echo "Skipping removal"
+          echo "Skipping removal"
         fi
 
         if [[ $DCDEVSPACE == *1* ]]; then
           crave clone create --projectID $PROJECTID $PROJECTFOLDER || echo "Crave clone create failed!"
         else
-          mkdir -p $PROJECTFOLDER
+          mkdir -p "$PROJECTFOLDER"
         fi
+
+        echo "Post-creation check:"
+        ls -al /crave-devspaces || true
+        ls -al "$PROJECTFOLDER" || echo "⚠️ Project folder missing!"
         
       # Check-out in order to access the repository's files.
     - name: Check-out to repository
