--- a/.github/workflows/selfhosted.yml
+++ b/.github/workflows/selfhosted.yml
@@ -397,16 +397,13 @@ jobs:
           fi
         )
 
-# Create a project folder
-    - name: Create Project Folders
+- name: Create Project Folders
       run: |
         echo "DCDEVSPACE status: ${DCDEVSPACE}"
         if [[ $DCDEVSPACE != *1* ]]; then
           echo "Symlinking devspace folder"
           mkdir -p devspace
           sudo mkdir -p /crave-devspaces
-          
-          # ✅ FIXED: use $(pwd) instead of ${pwd}
           sudo ln -sf "$(pwd)/devspace" /crave-devspaces
           sudo chmod 777 /crave-devspaces
 
@@ -418,28 +415,28 @@ jobs:
         fi
 
         if grep -q "$PROJECTFOLDER" <(crave clone list --json | jq -r '.clones[]."Cloned At"') || [[ "${DCDEVSPACE}" == "1" ]]; then
-          crave clone destroy -y $PROJECTFOLDER || echo "Error removing $PROJECTFOLDER"
-        else          
+          crave clone destroy -y "$PROJECTFOLDER" || echo "Error removing $PROJECTFOLDER"
+        else
           echo "Skipping removal"
         fi
 
-if [[ $DCDEVSPACE == *1* ]]; then
-  echo "Attempting to create Crave clone for project $PROJECTID at $PROJECTFOLDER..."
-  crave clone create --projectID "$PROJECTID" "$PROJECTFOLDER"
-  
-  # Verify clone creation succeeded
-  if [ ! -d "$PROJECTFOLDER" ]; then
-    echo "❌ ERROR: Crave clone creation failed — $PROJECTFOLDER was not created."
-    echo "Listing existing Crave clones for debugging:"
-    crave clone list --json | jq -r '.clones[] | "\(.Name) → \(.\"Cloned At\")"' || true
-    exit 1
-  else
-    echo "✅ Crave clone successfully created at $PROJECTFOLDER"
-  fi
-else
-  echo "Not in devspace; creating local project folder instead..."
-  mkdir -p "$PROJECTFOLDER"
-fi
+        if [[ $DCDEVSPACE == *1* ]]; then
+          echo "Attempting to create Crave clone for project $PROJECTID at $PROJECTFOLDER..."
+          crave clone create --projectID "$PROJECTID" "$PROJECTFOLDER"
+
+          # Verify clone creation succeeded
+          if [ ! -d "$PROJECTFOLDER" ]; then
+            echo "❌ ERROR: Crave clone creation failed — $PROJECTFOLDER was not created."
+            echo "Listing existing Crave clones for debugging:"
+            crave clone list --json | jq -r '.clones[] | "\(.Name) → \(.\"Cloned At\")"' || true
+            exit 1
+          else
+            echo "✅ Crave clone successfully created at $PROJECTFOLDER"
+          fi
+        else
+          echo "Not in devspace; creating local project folder instead..."
+          mkdir -p "$PROJECTFOLDER"
+        fi
 
         echo "Post-creation check:"
         ls -al /crave-devspaces || true
