--- a/.github/workflows/selfhosted.yml
+++ b/.github/workflows/selfhosted.yml
@@ -397,13 +397,16 @@ jobs:
           fi
         )
 
-- name: Create Project Folders
+# Create a project folder
+    - name: Create Project Folders
       run: |
         echo "DCDEVSPACE status: ${DCDEVSPACE}"
         if [[ $DCDEVSPACE != *1* ]]; then
           echo "Symlinking devspace folder"
           mkdir -p devspace
           sudo mkdir -p /crave-devspaces
+          
+          # ✅ FIXED: use $(pwd) instead of ${pwd}
           sudo ln -sf "$(pwd)/devspace" /crave-devspaces
           sudo chmod 777 /crave-devspaces
 
@@ -415,32 +418,32 @@ jobs:
         fi
 
         if grep -q "$PROJECTFOLDER" <(crave clone list --json | jq -r '.clones[]."Cloned At"') || [[ "${DCDEVSPACE}" == "1" ]]; then
-          crave clone destroy -y "$PROJECTFOLDER" || echo "Error removing $PROJECTFOLDER"
-        else
+          crave clone destroy -y $PROJECTFOLDER || echo "Error removing $PROJECTFOLDER"
+        else          
           echo "Skipping removal"
         fi
 
-        if [[ $DCDEVSPACE == *1* ]]; then
-          echo "Attempting to create Crave clone for project $PROJECTID at $PROJECTFOLDER..."
-          crave clone create --projectID "$PROJECTID" "$PROJECTFOLDER"
-
-          # Verify clone creation succeeded
-          if [ ! -d "$PROJECTFOLDER" ]; then
-            echo "âŒ ERROR: Crave clone creation failed â€” $PROJECTFOLDER was not created."
-            echo "Listing existing Crave clones for debugging:"
-            crave clone list --json | jq -r '.clones[] | "\(.Name) â†’ \(.\"Cloned At\")"' || true
-            exit 1
-          else
-            echo "âœ… Crave clone successfully created at $PROJECTFOLDER"
-          fi
-        else
-          echo "Not in devspace; creating local project folder instead..."
-          mkdir -p "$PROJECTFOLDER"
-        fi
+if [[ $DCDEVSPACE == *1* ]]; then
+  echo "Attempting to create Crave clone for project $PROJECTID at $PROJECTFOLDER..."
+  crave clone create --projectID "$PROJECTID" "$PROJECTFOLDER"
+  
+  # Verify clone creation succeeded
+  if [ ! -d "$PROJECTFOLDER" ]; then
+    echo "❌ ERROR: Crave clone creation failed — $PROJECTFOLDER was not created."
+    echo "Listing existing Crave clones for debugging:"
+    crave clone list --json | jq -r '.clones[] | "\(.Name) → \(.\"Cloned At\")"' || true
+    exit 1
+  else
+    echo "✅ Crave clone successfully created at $PROJECTFOLDER"
+  fi
+else
+  echo "Not in devspace; creating local project folder instead..."
+  mkdir -p "$PROJECTFOLDER"
+fi
 
         echo "Post-creation check:"
         ls -al /crave-devspaces || true
-        ls -al "$PROJECTFOLDER" || echo "âš ï¸ Project folder missing!"
+        ls -al "$PROJECTFOLDER" || echo "⚠️ Project folder missing!"
         
       # Check-out in order to access the repository's files.
     - name: Check-out to repository
