--- a/.github/workflows/selfhosted.yml
+++ b/.github/workflows/selfhosted.yml
@@ -599,14 +599,14 @@ jobs:
     - name: Execute if the job is cancelled
       if: ${{ cancelled() }}
       run: |
-        cd $PROJECTFOLDER
+        cd /crave-devspaces/Lineage22
         crave stop --all
 
       # Upload '.zip's and '.img's directly from 'crave' ssh.
     - name: Upload build artifact(s)
       continue-on-error: true
       run: |
-        cd $PROJECTFOLDER
+        cd /crave-devspaces/Lineage22
         echo "${{ secrets.GITHUB_TOKEN }}" > token.txt
         crave push token.txt -d $(crave ssh -- pwd | grep -v Select | sed -s 's/\r//g')/
         crave ssh -- "export GH_UPLOAD_LIMIT="${{ secrets.GH_UPLOAD_LIMIT }}"; bash /opt/crave/github-actions/upload.sh '${{ github.run_id }}' '${{ github.event.inputs.DEVICE_NAME }}'  '${{ github.repository }}' '${{ github.event.inputs.PRODUCT_NAME }}-${{ github.run_id }}' '${{ secrets.EXTRA_FILES }}'"
@@ -616,7 +616,7 @@ jobs:
       if: ${{ failure() }}
       id: errorlog
       run: |
-        cd $PROJECTFOLDER
+        cd /crave-devspaces/Lineage22
         crave ssh -- sleep 1
         crave pull out/error.log
         echo "Displaying out/error.log"
@@ -625,7 +625,7 @@ jobs:
       # Upload to Telegram
     - name: Upload Using telegram-upload
       run: |
-        cd $PROJECTFOLDER
+        cd /crave-devspaces/Lineage22
         crave ssh -- "export TG_UPLOAD_LIMIT="${{ secrets.TG_UPLOAD_LIMIT }}"; bash /opt/crave/telegram/upload.sh '${{ github.event.inputs.DEVICE_NAME }}' '${{ secrets.EXTRA_FILES }}'"
       continue-on-error: true
 
